<resources>
    <string name="app_name">GYM Attendance Tracker</string>
    <string name="gymfreak">GymFreak</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="register_here">Register Here!</string>
    <string name="sign_in">SIGN IN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_scan">ScanActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>